# manga-reader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  backup-base-image.sh  build-base.sh  build.ts  docker-compose.dev.yml  docker-compose.ocr.yml  docker-compose.yml  docker-entrypoint.sh  drizzle.config.ts  entrypoint.sh  healthcheck.ts  package.json  release-images.sh  requirements.txt  restore-base-image.sh  test-polygon-patch.ts  test_patch_via_socket.sh  tsconfig.json
docs/: BUILD.md  DOCKER-OPTIMIZATION.md  DOCKER_SETUP.md  FILEWATCHER_USAGE.md  MANGAOCR.md  QUICK_START.md  TEST_OCR.md
drizzle/: 0000_greedy_terror.sql  0000_oval_lizard.sql  0000_smart_the_phantom.sql  0001_black_guardian.sql  0001_round_sugar_man.sql  0002_add_synopsis_to_series.sql  0002_dry_chronomancer.sql  0003_add_cover_art_to_series.sql  0003_region_refactor.sql  0004_nosy_malice.sql  0004_remove_chapter_tags.sql  0005_plain_firelord.sql  0006_military_dazzler.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
manga-ocr/: DOCKER-OPTIMIZATION.md  Dockerfile  MANGAOCR.md  README.md  entrypoint.sh  healthcheck.py  pyproject.toml
manga-ocr/src/: __init__.py  __main__.py  models.py  ocr.py  response_models.py  server.py  state.py  utils.py
manga-ocr/src/handlers/: __init__.py  health.py  inpaint.py  merge.py  patch.py  predict.py  scan.py  scan_upload.py
manga-ocr/src/models/inpainting/: __init__.py  anime_lama.py  helper.py
manga-ocr/src/patch_generator/: __init__.py  ffc.py  lama.py  text_cleaner.py  text_renderer.py
manga-ocr/src/region_detector/: __init__.py  predict.py
src/: env-config.ts  server.ts
(+144 files in other folders)
